--- a/app/src/main/res/layout/political_frame_8.xml
+++ b/app/src/main/res/layout/political_frame_8.xml
@@ -56,7 +56,7 @@
                     android:textStyle="bold"
                     android:textColor="@color/white"
                     android:text="Name"
-                    android:fontFamily="@font/khand"
+                    android:fontFamily="@font/khand_bold"
                     android:textSize="@dimen/_20sdp" />
 
                 <TextView
