--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
     <androidx.constraintlayout.widget.ConstraintLayout
+     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/bg_screen"
-        tools:context="com.sanskruti.volotek.ui.activities.FestivalActivity">
+        tools:context="com.sanskruti.volotek.ui.activities.CategoryActivity">
 
         <include
             android:id="@+id/toolbar"
@@ -33,7 +33,7 @@
                 android:layout_height="match_parent"
                 android:paddingVertical="@dimen/_2sdp"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                app:spanCount="3" />
+                app:spanCount="2" />
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
@@ -69,4 +69,3 @@
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
