--- a/app/src/main/res/layout/activity_edit_personal_profile_details.xml
+++ b/app/src/main/res/layout/activity_edit_personal_profile_details.xml
@@ -157,8 +157,9 @@
             android:layout_height="wrap_content">
             <ImageView
                 android:id="@+id/photoView"
-                android:layout_width="225dp"
-                android:layout_height="225dp"/>
+                android:layout_width="200dp"
+                android:src="@drawable/photo_upload"
+                android:layout_height="200dp"/>
             <ImageView
                 android:id="@+id/photoViewFlip"
                 android:visibility="gone"
@@ -217,6 +218,7 @@
             <RelativeLayout
                 android:id="@+id/movableImageView"
                 android:layout_width="150dp"
+                android:visibility="gone"
                 android:layout_height="150dp">
                 <ImageView
                     android:id="@+id/movableImageViewClose"
