--- a/app/src/main/res/layout/download_dialog.xml
+++ b/app/src/main/res/layout/download_dialog.xml
@@ -11,6 +11,6 @@
         android:textStyle="bold"
         android:textColor="@color/black"
         android:textSize="15dp"
-        android:text="Are you confirm to download?" />
+        android:text="Do you confirm the download?" />
 
 </LinearLayout>
