--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -364,17 +364,162 @@
                         app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
                         tools:listitem="@layout/item_feature" />
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rv_greeting_feature"
+<!--                    <androidx.recyclerview.widget.RecyclerView-->
+<!--                        android:id="@+id/rv_greeting_feature"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginVertical="@dimen/_4sdp"-->
+<!--                        android:orientation="vertical"-->
+<!--                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
+<!--                        app:layout_constraintEnd_toEndOf="parent"-->
+<!--                        app:layout_constraintStart_toStartOf="parent"-->
+<!--                        app:layout_constraintTop_toBottomOf="@+id/linearLayout9"-->
+<!--                        tools:listitem="@layout/item_feature" />-->
+                    <LinearLayout
+                        android:id="@+id/linearLayout12"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginVertical="@dimen/_4sdp"
+                        android:background="@color/alpha_active_color"
                         android:orientation="vertical"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        android:paddingVertical="@dimen/_4sdp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
-                        tools:listitem="@layout/item_feature" />
+                        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">
+
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_4sdp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentStart="true"
+                                android:layout_centerVertical="true"
+                                android:layout_marginStart="@dimen/_10sdp"
+                                android:fontFamily="@font/nunito_sans_semibold"
+                                android:text="Trending"
+                                android:textColor="@color/black"
+                                android:textSize="@dimen/_15sdp" />
+
+
+                            <LinearLayout
+                                android:id="@+id/txt_view_trending"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentEnd="true"
+                                android:layout_centerVertical="true"
+                                android:layout_marginEnd="@dimen/_10sdp"
+                                android:gravity="center"
+                                android:paddingVertical="@dimen/_3sdp"
+                                app:layout_constraintEnd_toEndOf="parent">
+
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_centerVertical="true"
+                                    android:layout_toStartOf="@+id/imageView22"
+                                    android:padding="@dimen/_2sdp"
+                                    android:text="@string/view_all"
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/_9sdp" />
+
+                                <ImageView
+                                    android:layout_width="@dimen/_10sdp"
+                                    android:layout_height="@dimen/_12sdp"
+                                    app:srcCompat="@drawable/ic_next"
+                                    app:tint="@color/black" />
+
+
+                            </LinearLayout>
+
+                        </RelativeLayout>
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/rv_trending"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginVertical="@dimen/_5sdp"
+                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                            app:spanCount="2"
+                            />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/linearLayout8"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/alpha_active_color"
+                        android:orientation="vertical"
+                        android:paddingVertical="@dimen/_4sdp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">
+
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_4sdp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentStart="true"
+                                android:layout_centerVertical="true"
+                                android:layout_marginStart="@dimen/_10sdp"
+                                android:fontFamily="@font/nunito_sans_semibold"
+                                android:text="Greeting"
+                                android:textColor="@color/black"
+                                android:textSize="@dimen/_15sdp" />
+
+
+                            <LinearLayout
+                                android:id="@+id/txt_view_greeting"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentEnd="true"
+                                android:layout_centerVertical="true"
+                                android:layout_marginEnd="@dimen/_10sdp"
+                                android:gravity="center"
+                                android:paddingVertical="@dimen/_3sdp"
+                                app:layout_constraintEnd_toEndOf="parent">
+
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_centerVertical="true"
+                                    android:layout_toStartOf="@+id/imageView22"
+                                    android:padding="@dimen/_2sdp"
+                                    android:text="@string/view_all"
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/_9sdp" />
+
+                                <ImageView
+                                    android:layout_width="@dimen/_10sdp"
+                                    android:layout_height="@dimen/_12sdp"
+                                    app:srcCompat="@drawable/ic_next"
+                                    app:tint="@color/black" />
+
+
+                            </LinearLayout>
+
+                        </RelativeLayout>
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/rv_greeting"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginVertical="@dimen/_5sdp"
+                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                            app:spanCount="2"
+                            />
+                    </LinearLayout>
 
                     <LinearLayout
                         android:id="@+id/linearLayout7"
@@ -445,7 +590,7 @@
                             android:layout_height="match_parent"
                             android:layout_marginVertical="@dimen/_5sdp"
                             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                            app:spanCount="3"
+                            app:spanCount="2"
                             />
                     </LinearLayout>
 
@@ -464,7 +609,7 @@
             android:layout_margin="16dp"
             android:src="@drawable/ic_whatsapp"
             app:backgroundTint="#25D366"
-            android:visibility="gone"
+            android:visibility="visible"
             app:borderWidth="0dp"
             app:elevation="6dp"
             app:fabSize="normal"
