--- a/app/src/main/res/layout/political_frame_12.xml
+++ b/app/src/main/res/layout/political_frame_12.xml
@@ -149,7 +149,7 @@
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|center"
+        android:layout_gravity="top|left"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp">
 
