--- a/app/src/main/res/layout/political_frame_7.xml
+++ b/app/src/main/res/layout/political_frame_7.xml
@@ -130,7 +130,7 @@
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|end"
+        android:layout_gravity="top|start"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp">
 
