--- a/app/src/main/res/layout/activity_edit_political_profile_details.xml
+++ b/app/src/main/res/layout/activity_edit_political_profile_details.xml
@@ -145,7 +145,7 @@
         android:layout_width="match_parent"
         android:layout_height="390dp"
         android:layout_below="@id/header"
-        android:layout_margin="10dp">
+        >
         <LinearLayout
             android:id="@+id/photoViewll"
             android:layout_width="wrap_content"
@@ -168,7 +168,13 @@
         <RelativeLayout
             android:id="@+id/constraint"
             android:layout_width="fill_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            >
+            <VideoView
+                android:id="@+id/backgroundVideoView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"/>
             <RelativeLayout
                 android:id="@+id/constraintThum"
                 android:layout_width="fill_parent"
