--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -18,8 +18,8 @@
 
     <item
         android:id="@+id/download_menu"
-        android:icon="@drawable/category_new"
-        android:title="Categories" />
+        android:icon="@drawable/ic_frame_video"
+        android:title="Videos" />
 
     <item
         android:id="@+id/profile_menu"
