--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,7 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/toolbarColor</item>
         <!-- Customize your theme here. -->
         <item name="android:fontFamily">@font/nunito_sans_regular</item>
-<!--        <item name="bottomSheetDialogTheme">@style/CustomBottomSheetDialog</item>-->
+        <!--        <item name="bottomSheetDialogTheme">@style/CustomBottomSheetDialog</item>-->
 
         <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
     </style>
@@ -50,6 +50,11 @@
 
     <style name="AppModalStyle" parent="Widget.Design.BottomSheet.Modal">
         <item name="android:background">@drawable/tab_login</item>
+    </style>
+    <!-- Base application theme. -->
+    <style name="Base.AppTheme" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
 </resources>
